grid layout alignment fix when main to small

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
 body {
   margin: 0px;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-rows: 0fr 1fr;
   height: 100vh;
 }
 
